[gd_scene load_steps=22 format=3 uid="uid://b8veh66ri0g5w"]

[ext_resource type="Script" path="res://Scenes/enemy_alpha_basic.gd" id="1_uvh7r"]
[ext_resource type="Texture2D" uid="uid://dh75ptgicr38x" path="res://Assets/Sprites/Enemies/enemy_alpha.png" id="1_vminj"]
[ext_resource type="PackedScene" uid="uid://bortldyrewr18" path="res://Scenes/health_component.tscn" id="2_0vlwc"]
[ext_resource type="PackedScene" uid="uid://blkt27bl121e3" path="res://Scenes/bullet_enemy.tscn" id="2_7opw4"]
[ext_resource type="Texture2D" uid="uid://b7e6jo7k2hlhc" path="res://Assets/Sprites/Enemies/enemy_alpha_gun_0.png" id="2_oewdx"]
[ext_resource type="PackedScene" uid="uid://ch2diffpricnp" path="res://Scenes/hitbox_component.tscn" id="3_2gy6n"]
[ext_resource type="Shader" uid="uid://d15v6bm86lqua" path="res://Assets/Shaders/hit_flash.tres" id="3_ice1r"]
[ext_resource type="AudioStream" uid="uid://d3v8pgkew4td6" path="res://Assets/Sound/enemt_shoot_01.mp3" id="8_y3f7p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m0m0m"]
resource_local_to_scene = true
shader = ExtResource("3_ice1r")
shader_parameter/enable = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c3ait"]
resource_local_to_scene = true
shader = ExtResource("3_ice1r")
shader_parameter/enable = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jn3ia"]
height = 22.0

[sub_resource type="Animation" id="Animation_36q2e"]
resource_name = "Idle"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-3, -33), Vector2(-3, -34)]
}

[sub_resource type="Animation" id="Animation_mfr2h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -33)]
}

[sub_resource type="Animation" id="Animation_cvhho"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-3, -33), Vector2(-3, -34)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j5yij"]
_data = {
"Idle": SubResource("Animation_36q2e"),
"RESET": SubResource("Animation_mfr2h"),
"Walk": SubResource("Animation_cvhho")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1sd0a"]
size = Vector2(15, 56)

[sub_resource type="CircleShape2D" id="CircleShape2D_m4p0e"]
radius = 381.033

[sub_resource type="CircleShape2D" id="CircleShape2D_2t0ci"]
radius = 813.022

[sub_resource type="Animation" id="Animation_dus1v"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Weapon:material:shader_parameter/enable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ehpad"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Weapon:material:shader_parameter/enable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xunkh"]
_data = {
"RESET": SubResource("Animation_ehpad"),
"hit_flash": SubResource("Animation_dus1v")
}

[node name="EnemyAlphaBasic" type="CharacterBody2D" groups=["Enemy"]]
z_index = 1
collision_layer = 4
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_uvh7r")
bullet = ExtResource("2_7opw4")
bullet_speed = 150.0
move_speed = 15

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_m0m0m")
position = Vector2(0, -10)
texture = ExtResource("1_vminj")
offset = Vector2(0, -20)
hframes = 8
vframes = 2

[node name="Weapon" type="Sprite2D" parent="Sprite"]
material = SubResource("ShaderMaterial_c3ait")
position = Vector2(-3, -33)
texture = ExtResource("2_oewdx")
offset = Vector2(9, -1)

[node name="EndOfBarrel" type="Marker2D" parent="Sprite/Weapon"]
position = Vector2(23, -1.5)

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_jn3ia")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j5yij")
}
autoplay = "Idle"
speed_scale = 1.5

[node name="HealthComponent" parent="." instance=ExtResource("2_0vlwc")]

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_2gy6n")]
collision_layer = 4
collision_mask = 1
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-0.5, -32)
shape = SubResource("RectangleShape2D_1sd0a")

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]

[node name="RecalculateTimer" type="Timer" parent="Navigation"]
wait_time = 0.25
autostart = true

[node name="Aggro" type="Node2D" parent="."]
z_index = 1

[node name="AggroRange" type="Area2D" parent="Aggro"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro/AggroRange"]
position = Vector2(0, -52)
shape = SubResource("CircleShape2D_m4p0e")
debug_color = Color(0.85098, 0, 0.192157, 0)

[node name="DeAggroRange" type="Area2D" parent="Aggro"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro/DeAggroRange"]
position = Vector2(0, -52)
shape = SubResource("CircleShape2D_2t0ci")
debug_color = Color(0.92549, 0, 0.866667, 0)

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-1, -44)
target_position = Vector2(300, 0)
collision_mask = 3
collide_with_areas = true

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xunkh")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_y3f7p")

[connection signal="timeout" from="Navigation/RecalculateTimer" to="." method="_on_recalculate_timer_timeout"]
[connection signal="area_entered" from="Aggro/AggroRange" to="." method="_on_aggro_range_area_entered"]
[connection signal="area_exited" from="Aggro/DeAggroRange" to="." method="_on_de_aggro_range_area_exited"]
